# optimum-benchmark

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  aggregator.py  benchmark.json  benchmark_config.json  benchmark_report.json  benchmark_report.md  benchmark_report.txt  cpu_requirements.txt  cuda_requirements.txt  dana-client.py  experiments_aggregator.py  gpu_onnxruntime_training_requirements.txt  gpu_requirements.txt  llama_cpp_text_generation.py  main.py  pyproject.toml  report.py  reporter.py  requirements.txt  setup.py  sweep_aggregator.py  test.ipynb  test.py  tgi_requirements.txt  uv.toml
.github/workflows/: build_and_publish_docker_images.yaml  build_images.yaml  build_images_github.yaml  check_code_quality.yaml  check_quality.yaml  images.yaml  llm_perf_cuda_pytorch.yaml  llm_perf_cuda_pytorch_single_gpu.yaml  quality.yaml  release.yaml  security.yml  test_api_cpu.yaml  test_api_cuda.yaml  test_api_misc.yaml  test_api_rocm.yaml  test_cli_cpu_ipex.yaml  test_cli_cpu_llama_cpp.yaml  test_cli_cpu_neural_compressor.yaml  test_cli_cpu_onnxruntime.yaml  test_cli_cpu_openvino.yaml  test_cli_cpu_py_tgi.yaml  test_cli_cpu_py_txi.yaml  test_cli_cpu_pytorch.yaml  test_cli_cpu_vllm.yaml  test_cli_cuda_onnxruntime.yaml  test_cli_cuda_onnxruntime_single_gpu.yaml  test_cli_cuda_py_txi.yaml  test_cli_cuda_py_txi_single_gpu.yaml  test_cli_cuda_pytorch.yaml  test_cli_cuda_pytorch_multi_gpu.yaml  test_cli_cuda_pytorch_single_gpu.yaml  test_cli_cuda_tensorrt_llm.yaml  test_cli_cuda_tensorrt_llm_single_gpu.yaml  test_cli_cuda_torch_ort.yaml  test_cli_cuda_torch_ort_multi_gpu.yaml  test_cli_cuda_torch_ort_single_gpu.yaml  test_cli_cuda_torch_ort_training.yaml  test_cli_cuda_vllm.yaml  test_cli_cuda_vllm_single_gpu.yaml  test_cli_energy_star.yaml  (+45 more)
benchmark/: benchmark.py  config.py  utils.py
configs/: base_experiment.yaml  benchmark.yaml  bert.yaml  bert_inference_benchmark.yaml  default_benchmark.yaml  deit.yaml  exhaustive_ort_optimization.yaml  gpt2.yaml  hydra_base.yaml  onnxruntime_text__inference_exhaustive_optimization.yaml  onnxruntime_text_inference_exhaustive_optimization.yaml  optuna.yaml  optuna_example.yaml  optuna_onnxruntime.yaml  optuna_optimization.yaml  optuna_ort_opt.yaml  ort_exhaustive_optimization.yaml  pytorch_audio_inference.yaml  pytorch_deit.yaml  pytorch_text_inference.yaml  pytorch_vision_inference.yaml  pytorch_wav2vec.yaml  pytorch_whisper.yaml  whisper.yaml
configs/backend/: onnxruntime.yaml  pytorch.yaml
configs/benchmark/: inference.yaml  profiling.yaml
configs/input/: audio.yaml  text.yaml  vision.yaml
dana/: dana-client.py  dana_test.sh
docker/: cpu.dockerfile  cuda.dockerfile  gpu.Dockerfile  gpu.dockerfile  gpu_onnxruntime_training.Dockerfile  onnxruntime_training.dockerfile  ort_gpu.dockerfile  ort_training.dockerfile  rocm-ort.dockerfile  rocm.dockerfile  tensorrt.dockerfile  tensorrt_llm.dockerfile
docker/cpu/: Dockerfile
docker/cuda/: Dockerfile
docker/cuda-11.8/: Dockerfile
docker/cuda-12.1/: Dockerfile
docker/cuda-ort/: Dockerfile
docker/rocm/: Dockerfile
docker/rocm-5.7/: Dockerfile
docker/scripts/: build_gpu.sh  build_ort_training.sh
docker/unroot/: Dockerfile
energy_star/: _base_.yaml  image_classification.yaml  image_to_text.yaml  object_detection.yaml  question_answering.yaml  t5_question_answering.yaml  t5_summarization.yaml  t5_text_classification.yaml  t5_text_generation.yaml  text_classification.yaml  text_generation.yaml
examples/: README.md  _base_.yaml  api_launch.py  base_config.yaml  bert.yaml  cpu_ipex_bert.yaml  cpu_ipex_llama.yaml  cpu_llama_cpp_embedding.yaml  cpu_llama_cpp_text_generation.yaml  cpu_neural_compressor_inference_gpt2.yaml  cpu_onnxruntime_inference_bert.yaml  cpu_onnxruntime_inference_stable_diffusion.yaml  cpu_onnxruntime_static_quant_vit.yaml  cpu_onnxruntime_timm.yaml  cpu_openvino_8bit.yaml  cpu_openvino_8bit_bert.yaml  cpu_openvino_decoder.py  cpu_openvino_diffusion.yaml  cpu_openvino_inference_stable_diffusion.yaml  cpu_pytorch_inference_bert.yaml  cpu_pytorch_inference_gpt2.yaml  cpu_pytorch_training_bert.yaml  cpu_pytorch_training_gpt2.yaml  cuda_onnxruntime_inference_bert.yaml  cuda_onnxruntime_inference_gpt2.yaml  cuda_onnxruntime_training_gpt2.yaml  cuda_pytorch_bert.py  cuda_pytorch_bert.yaml  cuda_pytorch_inference_bert_2gpu.yaml  cuda_pytorch_inference_gpt2_2gpu.yaml  cuda_pytorch_llama.py  cuda_pytorch_llama.yaml  cuda_pytorch_llama_compile_model.yaml  cuda_pytorch_llama_compile_regions.yaml  cuda_pytorch_llama_quants.py  cuda_pytorch_training_bert.yaml  cuda_pytorch_training_gpt2 .yaml  cuda_pytorch_training_gpt2.yaml  cuda_pytorch_vlm.yaml  cuda_tgi_llama.yaml  (+64 more)
examples/docker/: gpu.Dockerfile  gpu_onnxruntime_training.Dockerfile  local_gpu.sh  local_gpu_onnxruntime_training.sh
examples/energy_star/: automatic_speech_recognition.yaml  (+20 more)
llm-perf/: benchmark_cuda_pytorch.py  benchmark_cuda_pytorch_awq.py  benchmark_cuda_pytorch_bnb.py  benchmark_cuda_pytorch_gptq.py
llm_perf/: benchmark_cuda_pytorch.py  constants.py  hardware.yml  update_llm_perf_cpu_pytorch.py  update_llm_perf_cuda_pytorch.py  update_llm_perf_leaderboard.py  update_open_llm_leaderboard.py  utils.py
optimum_benchmark/: __init__.py  base.py  benchmark.py  cli.py  config.py  env_utils.py  experiment.py  hub_utils.py  import_utils.py  install_utils.py  logging_utils.py  main.py  plot_utils.py  process_utils.py  report.py  system_utils.py  task_utils.py  utils.py  version.py
scripts/: benchmark_cuda_pytorch.py  install_quantization_libs.py  total_tests_runs.py  update_ci_badges.py
src/: dummy_generator.py  dummy_input_generator.py  experiment.py  main.py  profilers.py  symbolic_profiler.py  tracker.py  trackers.py  utils.py
tests/: conftest.py  test_api.py  test_backends.py  test_cli.py  test_diffusers.py  test_diffusion.py  test_energy_star.py  test_examples.py  test_examples_folder.py  test_generator.py  tests_generator.py
uv_scripts/: cpu_openvino_decoder.py  cpu_openvino_llm.py  cpu_openvino_vlm.py  cuda_onnxruntime_encoder.py  onnxruntime_encoder.py  openvino_llm.py  openvino_vlm.py
(+2476 files in other folders)
